css/designsprint.css
body, html {
    background: #f7f7f7;
    color: #222;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

header {
    background-attachment: fixed;
    background-image: url(../images/writing/designsprint/photo-sketching-blackandwhite.jpg);
    background-position: 50% 100%;
    background-size: cover;
    position: relative;
}

.header-wrap-gray {
    background: linear-gradient(180deg, transparent 0%, rgba(17,17,17,1) 100%);
    height: 100vh;
}

.header-wrap-white {
    background: linear-gradient(180deg, transparent 0%, rgba(247,247,247,0) 66%, rgba(247,247,247,1) 100%);
}

@media only screen and (max-width : 767.98px) {
    .header-wrap-white {
        background: linear-gradient(180deg, transparent 0%, rgba(247,247,247,0) 40%, rgba(247,247,247,1) 70%);
    }
}

.header-text {
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: calc(100% - 30px);
}

@media only screen and (max-width : 767.98px) {

    .header-text img {
        width: 100%;
    }

}

.logo {
    background-image: url(../images/writing/logo-mobile-white.png);
    background-repeat: no-repeat;
    background-size: 100%;
    height: 30px;
    left: calc(50% - 24px);
    position: absolute;
    top: 20px;
    width: 53px;
}

@media only screen and (min-width : 768px) {
    .logo {
        background-image: url(../images/writing/logo-mobile-sprite.svg);
        background-position: 0 0;
    }

    .logo:hover {
        background-position: 0 -60px;
    }
}

.mini-nav {
    margin-top: 60px;
    text-align: right;
}

.mini-nav a {
    color: rgba(0,0,0,0.5);
    margin: 0 20px;
    padding-bottom: 2px;
    text-decoration: none;
}

.mini-nav a:hover, .mini-nav a:focus {
    border-bottom: 2px solid #000;
    color: #000;
}

.mini-nav a.active-nav {
    border-bottom: 2px solid #000;
    color: #000;
    cursor: default;
}

.mini-nav.white a {
    color: rgba(255,255,255,0.5);
}

.mini-nav a:hover, .mini-nav a:focus, .mini-nav a.active-nav {
    border-bottom: 2px solid #fff;
    color: #fff;
}

.mini-nav a:last-of-type {
    margin-right: 0;
}

header h2 {
    color: #fff;
    font-size: 36px;
    font-weight: 100;
    margin-top: 10px;
    margin-bottom: 40px;
    text-align: left;
}


.embed-responsive {
    border: 3px solid #fff;
    margin-top: 10px;
    margin-bottom: 20px;
}

h2 {
    font-family: Georgia;
    font-size: 35px;
    font-style: italic;
    font-weight: 900;
    margin-top: 40px;
    margin-bottom: 25px;
    text-align: center;
}

article h2::after {
    border-top: 10px solid #f15403;
    content: '';
    display: block;
    margin: 30px auto;
    width: 80px;
}

h3 {
    background-image: url(../images/writing/monogram-gray-on-white.png);
    background-repeat: no-repeat;
    background-position: 50% 0;
    font-size: 24px;
    margin-bottom: 20px;
    margin-top: 50px;
    padding-top: 80px;
}

article h2 + h3, article .dark h2 + article .dark h3 {
    background: none !important;
    margin-top: 30px;
    padding-top: 26px;
}

h4 {
    background: #222;
    color: #fff;
    display: inline-block;
    font-family: Helvetica;
    font-size: 22px;
    font-weight: 900;
    margin: 20px 0;
    padding: 5px 10px;
    text-transform: uppercase;
}

h5 {
    color: rgba(255,255,255,0.5);
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
    letter-spacing: 3px;
    margin-top: 0;
    margin-bottom: 5px;
    text-transform: uppercase;
}

.work-container h5 {
    margin-bottom: 0;
}

article a {
    border-bottom: 2px solid #f15403;
    color: #222;
    padding-bottom: 2px;
}

article a:hover {
    color: #f15403;
    text-decoration: none;
}

article p, article li {
    font-family: Georgia;
    font-size: 18px;
    font-weight: 300;
    margin-bottom: 20px;
    position: relative;
}

article img {
    border-radius: 10px;
}

figure {
    background: #fff;
    border-radius: 10px; 
    margin: 60px auto;
    padding: 20px;
}

.dark figure {
    background: transparent;
    padding: 0;
}

figcaption {
    font-family: Georgia;
    font-style: italic;
    margin: 10px 0 20px;
    opacity: 0.7;
}

figcaption .credit {
    text-align: right;
}

figcaption.center-caption {
    text-align: center;
}

article ul {
    padding-left: 0;
}

article li {
    list-style: none;
    padding-left: 20px;
}

article li::before {
    content: '';
    position: absolute;
    left: 0;
    top: 11px;
    width: 8px;
    height: 8px;
    background-color: #f15403;
    border-radius: 50%;
}

article ul.double-entry-list strong {
    display: block;
}

article .dark {
    background: #111;
    color: #fff;
    color: rgba(255,255,255,0.85);
    margin: 40px 0;
    padding: 60px 0
}

article .dark strong,
article .dark h2,
article .dark h3 {
    color: #fff;
}

article .dark + .dark {
    margin: 0;
    padding-top: 0;
}

article .dark.leadsection {
    margin-top: 0;
    padding-top: 0;
    padding-bottom: 40px;
}

article .dark a {
    color: #fff;
}

article .dark a:hover {
    color: #f15403;
}

article .dark ul {
    margin-bottom: 0;
}

article .dark li {
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    list-style-position: inside;
    list-style-type: circle;
    margin: 0;
    padding: 20px 0;
}

article .dark li:first-of-type {
    border-top: none;
    padding-top: 0;
}

article .dark li:last-of-type {
    padding-bottom: 0;
}

article .dark li::before {
    content: none;
}

article .dark h2 {
    margin: 0 0 20px;
}

article .dark h3 {
    background-image: url(../images/writing/monogram-gray-on-black.png);
}

article .orange {
    background: #F15403;
    
    margin-top: 20px;
    padding: 60px 0;
}

article .dark + .orange {
    margin-top: 0;
}

article .orange + .dark {
    margin-top: 0;
    padding-top: 60px;
}

article .orange img {
    box-shadow: 0 11px 30px 0px rgba(0,0,0,0.5);
}

article .section-without-leading-subheader {
    padding-top: 40px;
}

article .blockquote.filled {
    background: #222;
    color: #fff;
    border-left: 10px solid #f15403;
    border-top: none;
    border-right: none;
    border-bottom: none;
    border-radius: 0;
    color: #fff;
    font-weight: 900;
    margin: 0 0 20px;
    padding: 40px;
}

article .filled a {
    color: #777;
}

article .filled a:hover {
    color: #f15403;
}

article .blockquote.whitebox {
    background: #fff;
    box-shadow: 0 0 20px 0 rgba(0,0,0,0.05);
    color: #222;
    margin: 50px 0 40px;
}

.blockquote {
    border: 10px solid rgba(0,0,0,0.1);
    border-radius: 10px;
    margin-bottom: 40px;
    padding: 20px;
}

.orange-fill {
    border-left-color: #f15403;
    border-left-width: 10px;
    color: #f15403;
    font-style: italic;
    padding: 0 20px;
}

.orange-fill, .orange-fill p {
    font-weight: 900;
}

.orange-fill footer {
    color: #222;
    font-style: normal;
}

article .dark .blockquote {
    border-left: 10px solid rgba(255,255,255,0.1);
    font-size: 22px;
    margin: 40px 0;
    padding: 40px;
}

@media only screen and (min-width: 768px) {

    article .dark .blockquote {
        font-size: 36px;
    }

}

article .blockquote .caption {
    display: block;
    font-size: 22px;
    margin-top: 20px;
}

article .blockquote.table-of-contents {
    background: #222;
    color: #fff;
    margin: 40px 0 80px;
    padding: 30px 40px 20px;
}

article .blockquote.table-of-contents h1 {
    border-bottom: 5px solid rgba(255,255,255,0.1);
    display: inline-block;
    font-size: 22px;
    font-weight: 900;
    margin-bottom: 20px;
    margin-top: 10px;
    padding-bottom: 7px;
    text-transform: uppercase;
}

article .blockquote.table-of-contents ol {
    margin-top: 10px;
    padding-left: 0;
}

article .blockquote.table-of-contents ol ol {
    margin-bottom: 20px;
}

article .table-of-contents li::before {
    background-color: transparent;
    border: 1px solid rgba(255,255,255,0.5);
}

article .table-of-contents > ol >li::before {
    background-color: #fff;
    border: none;
}

article .table-of-contents li {
    margin-bottom: 10px;
}

article .table-of-contents li a {
    color: #fff;
}

article .table-of-contents li a:hover {
    color: #f15403;
}

.tweet-wrapper {
    margin-top: 40px;
    margin-bottom: 40px;
}

.dark .intro {
    border-color: rgba(255,255,255,0.1);
}

.ornamental-first-letter {
    font-size: 50px;
    line-height: 50px;
    /******************
    ⬆⬆⬆ Font-size and line-height must be matching for the proper effect.
    ******************/
    color: #f15403;
    float: left;
    font-weight: 900;
    margin-right: 10px;
}

@media only screen and (min-width : 768px) {
    article p, article li {
        font-size: 22px;
    }

    .ornamental-first-letter {
        font-size: 62px;
        line-height: 62px;
    }
}

.blockquote .ornamental-first-letter {
    line-height: 0;
    margin-top: 38px;
}

.blockquote.with-citation {
    text-align: center;
}

.blockquote.with-citation em {
    display: block;
    text-align: left;
}

.blockquote.with-citation em + em {
    margin-top: 20px;
}

.blockquote cite {
    border: 2px solid rgba(255,255,255,0.1);
    border-radius: 50px;
    color: #777;
    display: inline-block;
    font-style: normal;
    font-weight: 100;
    margin-top: 40px;
    padding: 10px 20px 10px 10px;
}

.blockquote cite a {
    border-bottom-color: #fff;
    color: #fff;
    font-family: Helvetica;
    font-weight: 900;
    margin: 0 15px 0 10px;
    text-transform: uppercase;
}

.blockquote cite a:hover {
    border-color: #f15403;
}

.blockquote cite img {
    border: 3px solid #fff;
    border-radius: 50%;
    display: inline;
    max-width: 60px;
}

.grayscale-quote {
    background: #ededed;
    border: none;
    border-radius: 0;
    border-left: 10px solid darkslategray;
    box-shadow: 0 0 20px 0 rgba(0,0,0,0.15);
    color: darkslategray;
    margin: 50px 0 40px;
}

.grayscale-quote strong {
    font-family: Helvetica;
    font-weight: 900;
    text-transform: uppercase;
}

.superheader {
    padding-bottom: 70px;
    text-align: center;
}

.superheadline {
    display: block;
    font-size: 22px;
    font-style: italic;
    line-height: 120%;
    margin-bottom: 40px;
}

@media only screen and (min-width: 768px) {

    .superheadline {
        font-size: 58px;
        margin-bottom: 60px;
    }

}

.grayscale {
    filter: grayscale(100%);
}

.monogram {
    margin: 80px auto;
}

.footer {
    background: transparent;
    color: rgba(255,255,255,0.2);
    margin-top: 0;
}

.footer .mini-nav {
    margin-top: 30px;
    margin-bottom: 15px;
    text-align: center;
}

.footer .footer-wrap {
    border-top: 1px solid rgba(0,0,0,0.1);
    margin-top: 25px;
    padding-top: 15px;
}

.dark .footer .footer-wrap {
    border-color: rgba(255,255,255,0.1);
}

.dark .footer .mini-nav a, .dark .footer .mini-nav a.active-nav {
    border-color: rgba(255,255,255,0);
    color: rgba(255,255,255,0.2);
    font-weight: 900;
    margin: 0 2px;
    text-transform: uppercase;;
}

.dark .footer .mini-nav a:hover {
    border-color: #fff;
    color: #fff;
}

.footer .copyright {
    margin: 0 2px;
}

.avatar img {
    margin: 0 auto;
}

@media only screen and (max-width: 767.98px) {

    .footer-top-border {
        display: none;
    }

    .avatar {
        margin-bottom: 20px;
        text-align: center;
    }

}

.bio p {
    font-size: 18px;
}

.bio {
    margin-top: 20px;
}

@media only screen and (min-width: 992px) and (max-width: 1199.98px) {

    .bio {
        margin-top: 20px;
    }

}

article .dark.bio-and-footer {
    margin-top: 80px;
    margin-bottom: 0;
    padding: 65px 0 0;
}

